--- a/ytui.html
+++ b/ytui.html
@@ -1,7 +1,7 @@
 <!--this is just a example use, you should make your own-->
 <html>
   <head>
-    <title>YouTube playlist expander</title>
+    <title>YouTube playlist viewer</title>
     <meta content="">
     <link rel="stylesheet" href="ytui.css" type="text/css">
   </head>
